<resources>
    <string name="app_name">Mercari app</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Relative Time -->
    <string name="relativetime_momentsago">همین الان</string>
    <string name="relativetime_secondsago">لحظاتی پیش</string>
    <string name="relativetime_minutesago">%d دقیقه پیش</string>
    <string name="relativetime_hoursago">%d ساعت پیش</string>
    <string name="relativetime_yesterday">دیروز</string>
    <string name="relativetime_daysago">%d روز پیش</string>
    <string name="relativetime_weeksago">%d هفته پیش</string>


    <string name="retry_title">تلاش مجدد</string>
    <string name="title_enter_terminal_number">شماره ترمینال را وارد کنید</string>
    <string name="title_continue">ادامه</string>
    <string name="title_terminal_number">شماره ترمینال</string>
    <string name="title_terminal_name">شماره ترمینال:</string>
    <string name="title_store_name">نام فروشگاه:</string>
    <string name="title_phone_number">تلفن:</string>
    <string name="title_mobile_number">موبایل:</string>
    <string name="title_address">آدرس:</string>
    <string name="title_cancel">لغو</string>
    <string name="title_confirm">تایید</string>
</resources>
